export interface User {
    id: string;
    name: string;
    email: string;
    role: 'ADMIN' | 'MANAGER' | 'DEVELOPER';
    avatarUrl?: string;
}
